# enum_lesson

06_01_mathfunc/: 06_01_mathfunc.cpp
06_02_Counter/: 06_02_Counter.cpp  06_02_Counter.vcxproj
06_03_Figure1/: 06_03_Figure1.cpp  06_03_Figure1.vcxproj  06_03_Figure1.vcxproj.filters  Equil.h  IsosTriangle.h  Paralelogram.h  Quadrangle.h  RightQuadrangle.cpp  Righttriangle.h  Rombus.cpp  Square.h  Triangle.cpp  Triangle.h
07_01_MODE/: 07_01_MODE.cpp  07_01_MODE.sln  07_01_MODE.vcxproj.filters
08_01_Lenght/: 08_01_Lenght.sln  08_01_Lenght.vcxproj
09_01_Numerator/: 09_01_Numerator.cpp  09_01_Numerator.vcxproj.filters
09_02_Numerator/: 09_02_Numerator.cpp
Base Data/: CMakelists.txt  Create.txt  Insert.txt  main.cpp
Base programm С++/06_01_mathfunc/: 06_01_mathfunc.vcxproj.filters  Math.cpp
Base programm С++/06_02_Counter/: 06_02_Counter.sln  Counter1.h
Base programm С++/06_03_Figure1/: 06_03_Figure1.vcxproj  Paralelogram.h  Righttriangle.h
Base programm С++/08_01_Lenght/: 08_01_Lenght.cpp  08_01_Lenght.vcxproj.filters
Base programm С++/09_02_Numerator/: 09_02_Numerator.vcxproj.filters
Base programm С++/ClassFigure_1/: ClassFigure_1.cpp  ClassFigure_1.sln
Base programm С++/ClassFigure_2/: ClassFigure_2.vcxproj.filters
Base programm С++/Cmake/: ALL_BUILD.vcxproj.filters  CMakelists.txt  my_first_cmake_program.cpp
Base programm С++/Countert_Class/: Countert_Class.vcxproj.filters
Base programm С++/Curs_Reces/: TrCamal.cpp
Base programm С++/Figure_Cmake/: 06_03_Figure1.cpp  CMakelists.txt  Figure.cpp  Figure_Exception.h  Quadrangle.h
Base programm С++/Struct_lasson_2/: Struct_lasson_2.sln
Base programm С++/curs_races_fix/: CMakeLists.txt  Cenyuar.h  Magic_Car.h  Transport.cpp  Transport.h  fastCamal.h
Base programm С++/enum_lasson_1/: enum_lasson_1.vcxproj  enum_lasson_1.vcxproj.filters
Base programm С++/in_out_adress1/: in.txt  in_out_adress1.cpp  in_out_adress1.sln  in_out_adress1.vcxproj
Base programm С++/in_out_adress2/: in_out_adress2.sln
Base programm С++/struct_lasson_3/: struct_lasson_3.sln  struct_lasson_3.vcxproj
Calculate_class/: Calculate_class.cpp  Calculate_class.sln  Calculate_class.vcxproj
ClassFigure_1/: ClassFigure_1.cpp  ClassFigure_1.vcxproj  ClassFigure_1.vcxproj.filters
ClassFigure_2/: ClassFigure_2.cpp  ClassFigure_2.sln  ClassFigure_2.vcxproj
ClassFigure_3/: ClassFigure_3.cpp  ClassFigure_3.sln  ClassFigure_3.vcxproj
Cmake/: CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  myfirstcmake.sln  myfirstcmake.vcxproj
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  in.txt
Countert_Class/: Countert_Class.sln  Countert_Class.vcxproj
Curs_Reces/: Boots.cpp  BroomStick.cpp  BroomStick.h  Cenyuar.cpp  Curs_Reces.cpp  Curs_Reces.vcxproj  Curs_Reces.vcxproj.filters  Eagle.cpp  Magic_Car.cpp  TrCamal.cpp  TrCamal.h  Transport.cpp  Transport.h  fastCamal.cpp
Curs_Reces/Project1/: Boots.h  BroomStick.cpp  Cenyuar.cpp  Curs_Reces.cpp  Eagle.cpp  Magic_Car.cpp  Project1.vcxproj  fastCamal.cpp
Diplom/base/: PostgreDb.cpp  PostgreDb.h  Readconfig.cpp  Readconfig.h  Spider.cpp  Spider.h  Start.cpp  StaticSpider.cpp  http_server.cpp
Diplom/old/: CMakeLists.txt  SearchEngine.h  Spider.cpp  Start.h  main.cpp
Diplom/old/base/: PostgreDb.cpp  Start.cpp  StaticSpider.cpp  StaticSpider.h  form.html  http_server.h
Figure_Cmake/: IsosTriangle.h  Rombus.h  Triangle.h
QT/ConsoleQT/: CMakeLists.txt  main.cpp
QT/DataBaseLect/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/Design/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  dockwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow1.cpp  mainwindow1.h  mainwindow1.ui
QT/PreConcurrent/: CMakeLists.txt  mainwindow.cpp
QT/PreGraphic/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/PreTCPclient/: mainwindow.cpp  mainwindow.ui  structs.h  tcpclient.cpp  tcpclient.h
QT/PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
QT/QtWidget/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
QT/SignalSlot/: CMakeLists.txt  CMakeUserPresets.json  Stopwatch.h  widget.cpp  widget.h  widget.ui
QT/SignalSlot/1/: 1.cpp  1.h  CMakeLists.txt
Struct_lasson_2/: Struct_lasson_2.cpp  Struct_lasson_2.vcxproj
TemplateProgect/Builder/: Builder.cpp  Builder.sln  (+3 more)
Test_unit/: CMakeLists.txt  main.cpp
curs_races_fix/: Boots.cpp  CMakeLists.txt  Curs_Reces.cpp  Curs_Reces.sln  Curs_Reces.vcxproj  Curs_Reces.vcxproj.filters  Project1.vcxproj.filters  Temp.h  Transport.h
enum_lasson_1/: enum_lasson_1.cpp
in_out_adress2/: in_out_adress2.cpp  in_out_adress2.vcxproj
my_first_cmake/: CMakelists.txt
simple-neuro-network-main/: CMakeLists.txt  main.cpp
simple-neuro-network-main/neuro-network/: CMakeLists.txt  myneuro.cpp  myneuro.h
struct_lasson_3/: struct_lasson_3.vcxproj.filters
Тесты/: main.cpp
(+1231 files in other folders)
